frontend/test/should_pass/exectype_AssignVAllocToVar.grg
using exectype;

rule r
{
	modify  {
		exec({i:int=valloc()});
	}
}