frontend/test/should_fail/exectype_AssignVAllocToVar.grg
using exectype;

rule r
{
	modify  {
		exec({i:boolean=valloc()});
	}
}